--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,8 +6,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta content="telephone=no" name="format-detection">
-
-  <title>test</title>
+  <title>硕世健康</title>
   <style>
     input, textarea {
         -webkit-appearance: none;
